Dope sheet is inoperable by numpad [.] . #38987

Closed
opened 2014-03-06 08:30:05 +01:00 by tomo yanagisa · 14 comments

System Information
Windows8
GeForce 9800 GTX+

Blender Version
Broken: 2.70RC 19f7f9a

Short description of error
Dope Sheet is inoperable, and blender stop in some cases.

Exact steps for others to reproduce the error
On Dope Sheet.
In the presence of one or more key frames.
Deselect all keyframes.
Press numpad [.] .
Middle mouse drag.

**System Information** Windows8 GeForce 9800 GTX+ **Blender Version** Broken: 2.70RC 19f7f9a **Short description of error** Dope Sheet is inoperable, and blender stop in some cases. **Exact steps for others to reproduce the error** On Dope Sheet. In the presence of one or more key frames. Deselect all keyframes. Press numpad [.] . Middle mouse drag.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tomo.asks

Added subscriber: @tomo.asks

Added subscriber: @mont29

Added subscriber: @mont29

I do not see anything wrong here… Please describe your issue (what does "inoperable" means?)!

I do not see anything wrong here… Please describe your issue (what does "inoperable" means?)!
Author

The number of frames displayed at the bottom will disappear.
I think because there is no reference by the "View selected",
it 's jump to a frame that does not exist.

The number of frames displayed at the bottom will disappear. I think because there is no reference by the "View selected", it 's jump to a frame that does not exist.

I can’t confirm that, for me it just zooms to the whole frame range (1-250 by default)… Please attache a .blend file demonstrating your issue.

I can’t confirm that, for me it just zooms to the whole frame range (1-250 by default)… Please attache a .blend file demonstrating your issue.
Author

Left window is broken in my environment.#38987.blend

Left window is broken in my environment.[#38987.blend](https://archive.blender.org/developer/F80089/T38987.blend)
Bastien Montagne self-assigned this 2014-03-06 13:58:16 +01:00

Ok, can confirm this (there is also a redraw gltich here, it seems).

Ok, can confirm this (there is also a redraw gltich here, it seems).

Thanks for the file, btw. :)

Thanks for the file, btw. :)

This issue was referenced by blender/blender-addons-contrib@cfefc5d0d4

This issue was referenced by blender/blender-addons-contrib@cfefc5d0d4e6e704333936a295d6ffa45122fb1b

This issue was referenced by cfefc5d0d4

This issue was referenced by cfefc5d0d4e6e704333936a295d6ffa45122fb1b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit cfefc5d0d4.

Closed by commit cfefc5d0d4.
Author

Relieved :)

Relieved :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38987
No description provided.