Fix T38987 Dope sheet is inoperable with "view slected" when nothing is selected.

Code was unconditionnaly setting view's xmin and xmax, even when it was aborting afterward.